Work on bug #7975.  Changed how the user employment dates are calculated.

--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -86,3 +86,6 @@
 #timeclockTable .row1 .holiday, #timeclockTable .row0 .holiday {
     background: #FF0000;
 }
+#timeclockTable .nohours {
+    background: #FF0000;
+}
