--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -84,7 +84,7 @@
 }
 
 #timeclockTable .row1 .holiday, #timeclockTable .row0 .holiday {
-    background: #FF0000;
+    background: #D3FF21;
 }
 #timeclockTable .nohours {
     background: #FF0000;
