--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -59,6 +59,13 @@ table.timesheet tr.header th.today {
     background: #00FF00;
 }
 
+table.timesheet th {
+    background-color: #CCC;
+}
+table.timesheet tr.name th {
+    font-size: 1.5em;
+    height: 2em;
+}
 table.timesheet {
    /*table-layout:fixed;*/
    border-spacing: 0;
@@ -70,20 +77,17 @@ table.timesheet thead tr.header th {
     padding: 1px;
     text-align: center;
     height: 4em;
-    background-color: #CCC;
 }
 table.timesheet tfoot tr.header th {
     vertical-align: top;
     padding: 1px;
     text-align: center;
     height: 4em;
-    background-color: #CCC;
 }
 table.timesheet tfoot tr.header th.vertical {
     vertical-align: bottom;
 }    
 table.timesheet tr.subtotal th {
-    background-color: #CCC;
     vertical-align: middle;
     padding: 1px;
     padding-right: 5px;
@@ -94,7 +98,6 @@ table.timesheet tr.subtotal td {
     text-align: center;
 }
 table.timesheet tr.category th {
-    background-color: #CCC;
     padding-top: 0px;
     padding-bottom: 0px;
     padding-left: 1em;
@@ -114,16 +117,17 @@ table.timesheet tr.holiday td.holiday {
     background-color: #8defd9;
 }
 
+table.report th {
+    background-color: #CCC;
+}
 table.report thead tr.header th {
     vertical-align: bottom;
     padding: 1px;
     text-align: center;
     height: 2em;
-    background-color: #CCC;
 }
 table.report thead tr.subheader th {
     height: 1em;
-    background-color: #CCC;
     text-align: center;
 }
 
@@ -132,7 +136,6 @@ table.report tfoot tr.header th {
     padding: 1px;
     text-align: center;
     height: 2em;
-    background-color: #CCC;
 }
 
 #timeclock #addHoursTotal {
