--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -65,6 +65,7 @@ table.timesheet th {
 table.timesheet tr.name th {
     font-size: 1.5em;
     height: 2em;
+    text-align: center;
 }
 table.timesheet {
    /*table-layout:fixed;*/
