--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -109,6 +109,14 @@ table.timesheet td {
 table.timesheet td.hours, table.report td.hours {
     text-align: center;
 }
+table.report td.overtime {
+    text-align: center;
+    font-weight: bold;
+}
+table.report td.overtime.highlight {
+    background-color: #fbf095;
+}
+
 table.timesheet td.subtotal, table.timesheet td.total,  table.report td.subtotal, table.report td.total {
     text-align: center;
     font-weight: bold;
