More work on bug #8378.  Still working on the main report.

--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -138,7 +138,7 @@ table.report .employee .complete.no {
 }
 
 table.report th {
-    background-color: #CCC;
+    background-color: #CCC !important;
 }
 table.report thead tr.header th {
     vertical-align: bottom;
