More work on bug #8378.

--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -184,3 +184,12 @@ div.notes {
 .notes .note {
     padding-left:  4em;
 }
+div.reportcontrol {
+    clear: both;
+}
+input.date {
+    width: 8em;
+}
+div.input-append {
+    width: 100%;
+}
