More work on the report filtering for bug #8378.  It mostly works.

--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -193,3 +193,8 @@ input.date {
 div.input-append {
     width: 100%;
 }
+
+.reportcontrol .controls button {
+    width: 100%;
+    max-width: 10em;
+}
