--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -106,7 +106,7 @@ table.timesheet tr.category th {
 table.timesheet td {
     padding: 0px;
 }
-table.timesheet td.hours, table.report td.hours {
+table.timesheet td.hours, table.report td.hours, table.report td.percent{
     text-align: center;
 }
 table.report td.overtime {
