This fixes #8471.  I added important in the css sheet to make sure that background color is used.

--- a/com_timeclock/site/css/timeclock.css
+++ b/com_timeclock/site/css/timeclock.css
@@ -56,7 +56,7 @@
     vertical-align: top;
 }
 table.timesheet tr.header th.today {
-    background: #00FF00;
+    background: #00FF00 !important;
 }
 
 table.timesheet th {
