--- a/com_timeclock/admin/forms/timesheet.xml
+++ b/com_timeclock/admin/forms/timesheet.xml
@@ -87,6 +87,7 @@
             type="TimeclockProject"
             class="span10"
             default="1"
+            onchange="this.form.submit();"
             size="1"
             label="COM_TIMECLOCK_PROJECT"
             required="true"
@@ -96,6 +97,7 @@
             type="TimeclockUser"
             class="span10"
             default="1"
+            onchange="this.form.submit();"
             size="1"
             label="COM_TIMECLOCK_USER"
             required="true"
