This fixes #4.  It will now submit the data and reload the page when the project is changed.

--- a/com_timeclock/admin/forms/timesheet.xml
+++ b/com_timeclock/admin/forms/timesheet.xml
@@ -87,7 +87,7 @@
             type="TimeclockProject"
             class="span10"
             default="1"
-            onchange="this.form.submit();"
+            onchange="Joomla.submitbutton('update');"
             size="1"
             label="COM_TIMECLOCK_PROJECT"
             required="true"
@@ -97,7 +97,6 @@
             type="TimeclockUser"
             class="span10"
             default="1"
-            onchange="this.form.submit();"
             size="1"
             label="COM_TIMECLOCK_USER"
             required="true"
