Added the department list.

--- a/com_timeclock/admin/forms/department.xml
+++ b/com_timeclock/admin/forms/department.xml
@@ -41,4 +41,31 @@
             <option value="0">JUNPUBLISHED</option>
         </field>
     </fieldset>
+    <fieldset name="hidden">
+        <field
+            type="hidden"
+            name="checked_out"
+            default="0"
+        />
+        <field
+            type="hidden"
+            name="checked_out_time"
+            default="0000-00-00 00:00:00"
+        />
+        <field
+            type="hidden"
+            name="created_by"
+            default="0"
+        />
+        <field
+            type="hidden"
+            name="created"
+            default="0000-00-00 00:00:00"
+        />
+        <field
+            type="hidden"
+            name="department_id"
+            default="0"
+        />
+    </fieldset>
 </form>
