--- a/com_timeclock/admin/forms/holiday.xml
+++ b/com_timeclock/admin/forms/holiday.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form>
+<form addfieldprefix="HUGLLC\Component\Timeclock\Administrator\Field">
     <fieldset name="main" label="COM_TIMECLOCK_EDIT_TIMESHEET">
         <field
             name="worked"
