--- a/com_timeclock/admin/forms/holiday.xml
+++ b/com_timeclock/admin/forms/holiday.xml
@@ -6,7 +6,7 @@
             type="calendar"
             label="COM_TIMECLOCK_WORK_DATE"
             description="COM_TIMECLOCK_WORK_DATE_NAME_TIMESHEET_DESC"
-            class="span4"
+            class=""
             default="0000-00-00"
             format="%Y-%m-%d"
             size="40"
@@ -14,7 +14,7 @@
         <field
             name="hours1"
             type="text"
-            class="span2"
+            class=""
             label="COM_TIMECLOCK_HOURS"
             description="COM_TIMECLOCK_HOURS_TIMESHEET_DESC"
             size="8"
@@ -24,7 +24,7 @@
             type="textarea"
             label="COM_TIMECLOCK_NOTES"
             description="COM_TIMECLOCK_NOTES_TIMESHEET_DESC"
-            rows="1"
+            rows="10"
             required="true"
             cols="40"/>
     </fieldset>
@@ -32,11 +32,44 @@
         <field
             name="project_id"
             type="TimeclockHoliday"
-            class="span10"
+            class="form-select"
             default="1"
             size="1"
             label="COM_TIMECLOCK_PROJECT"
             required="true"
             description="COM_TIMECLOCK_PROJECT_TIMESHEET_DESC"/>
-        </fieldset>
+    </fieldset>
+    <fieldset name="hidden">
+        <field
+            type="hidden"
+            name="checked_out"
+            default="0"
+        />
+        <field
+            type="hidden"
+            name="checked_out_time"
+            default="0000-00-00 00:00:00"
+        />
+        <field
+            type="hidden"
+            name="created_by"
+            default="0"
+        />
+        <field
+            type="hidden"
+            name="created"
+            default="0000-00-00 00:00:00"
+        />
+        <field
+            type="hidden"
+            name="project_id"
+            default="0"
+        />
+        <field
+            type="hidden"
+            name="timesheet_id"
+            default="0"
+        />
+    </fieldset>
+
 </form>
